style: fixed padding-top on mobile navmenu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,6 +90,7 @@ nav {
     width: 100%;
     left: 0;
     padding-left: 1rem;
+    padding-top: .7rem;
     display: none;
     top: 100%;
     background-color: #E5E4E2;
